--- a/front-end/index.html
+++ b/front-end/index.html
@@ -83,7 +83,7 @@
 </head>
 <body>
   <!-- ปุ่มแอดมิน มุมซ้ายบน -->
-<//button id="btnAdmin" class="btn-admin-left" type="button" //aria-label="Admin"><///button>
+  </button id="btnAdmin" class="btn-admin-left" type="button" aria-label="Admin"> </button>
 
   <!-- ปุ่มฐานการเรียนรู้ มุมขวาบน -->
   <a href="Extention.html" class="btn-float-right"
