--- a/front-end/admin/login.html
+++ b/front-end/admin/login.html
@@ -2,80 +2,17 @@
 <html lang="th">
 <head>
   <meta charset="utf-8">
-  <title>Login - Admin</title>
+  <title>Login</title>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <style>
-    body {
-      margin: 0;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: #0b0c10;
-      font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial;
-      color: #e5e7eb;
-    }
-    .card {
-      background: #111318;
-      padding: 32px;
-      border-radius: 16px;
-      box-shadow: 0 8px 32px rgba(0,0,0,.45);
-      width: 100%;
-      max-width: 360px;
-      text-align: center;
-    }
-    h1 {
-      margin: 0 0 20px;
-      font-size: 1.5rem;
-      font-weight: 700;
-    }
-    input {
-      width: 100%;
-      padding: 12px 14px;
-      margin: 8px 0;
-      border-radius: 10px;
-      border: 1px solid rgba(255,255,255,.1);
-      background: #1a1c23;
-      color: #fff;
-      font-size: 1rem;
-    }
-    input:focus {
-      outline: none;
-      border-color: #2563eb;
-    }
-    button {
-      width: 100%;
-      padding: 12px;
-      border: none;
-      border-radius: 10px;
-      background: #2563eb;
-      color: #fff;
-      font-weight: 700;
-      font-size: 1rem;
-      cursor: pointer;
-      margin-top: 12px;
-      transition: background 0.2s;
-    }
-    button:hover {
-      background: #1d4ed8;
-    }
-    #msg {
-      margin-top: 14px;
-      font-size: 0.9rem;
-      color: #f87171;
-    }
-  </style>
 </head>
 <body>
-  <div class="card">
-    <h1>เข้าสู่ระบบแอดมิน</h1>
-    <form id="loginForm">
-      <input id="email" type="email" placeholder="Email" required>
-      <input id="password" type="password" placeholder="Password" required>
-      <button type="submit">Login</button>
-      <div id="msg"></div>
-    </form>
-  </div>
+  <h1>เข้าสู่ระบบแอดมิน</h1>
+  <form id="loginForm">
+    <input id="email" type="email" placeholder="Email" required>
+    <input id="password" type="password" placeholder="Password" required>
+    <button type="submit">Login</button>
+    <div id="msg"></div>
+  </form>
 
 <script>
 const SUPABASE_URL = "https://yowjvmiosrclqstoeqat.supabase.co";
